--- a/react_intro/task_5/dashboard/package.json
+++ b/react_intro/task_5/dashboard/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack --config config/webpack.config.js",
-    "start-dev": "webpack serve --mode development --config config/webpack.config.js"
+    "start": "webpack serve --mode development --config config/webpack.config.js"
   },
   "keywords": [],
   "author": "",
